--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<version>2.9.2</version>
 		</dependency>
 		
+		<!-- send email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+		
 		<dependency>
     		<groupId>io.springfox</groupId>
     		<artifactId>springfox-swagger-ui</artifactId>
