--- a/Frontend/Powerliften-coach/package.json
+++ b/Frontend/Powerliften-coach/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
