--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 		</dependency>
 		
 		<!-- send email -->
-        <dependency>
+        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
+        </dependency> -->
 		
 		<dependency>
     		<groupId>io.springfox</groupId>
